# my_project

MermaidFlow-main/: .gitignore  .gitmodules  README.md  WEAVE_WANDB_REMOVAL_SUMMARY.md  pyproject.toml  run.py
MermaidFlow-main/benchmarks/: aime.py  bbh.py  benchmark.py  gpqa.py  liar.py  math.py  wsc.py
MermaidFlow-main/scripts/: async_llm.py  evaluator.py  evolution_prompt.py  evolution_related.py  extract_dataset.py  interface.py  logs.py  mermaid_workflow.py  optimizer.py
MermaidFlow-main/scripts/optimizer_utils/: data_utils.py  evaluation_utils.py  experience_utils.py  graph_utils.py
MermaidFlow-main/scripts/prompts/: optimize_prompt.py
MermaidFlow-main/workspace/GSM8K/workflows/: results.json
MermaidFlow-main/workspace/GSM8K/workflows/round_1/: 0.85985_20250513_231917.csv  0.87121_20250513_231954.csv  graph.py  log.json  prompt.py
MermaidFlow-main/workspace/GSM8K/workflows/template/: operator_temp_1.py
MermaidFlow-main/workspace/HumanEval/workflows/: results.json
MermaidFlow-main/workspace/HumanEval/workflows/round_1/: 0.84848_20250513_231910.csv  0.87879_20250513_231916.csv  graph.py  log.json  prompt.py
MermaidFlow-main/workspace/HumanEval/workflows/template/: operator.py
MermaidFlow-main/workspace/MATH/workflows/: results.json
MermaidFlow-main/workspace/MATH/workflows/round_1/: 0.49138_20250513_232036.csv  graph.mmd  graph.py  log.json  prompt.py
MermaidFlow-main/workspace/MATH/workflows/template/: operator.py
MermaidFlow-main/workspace/MBPP/workflows/: results.json
MermaidFlow-main/workspace/MBPP/workflows/round_1/: graph.mmd  (+4 more)
(+1 files in other folders)
