[project]
name = "Neurips"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "aiofiles>=23.2.1",
    "dspy>=2.5.26",
    "httpx==0.27.2",
    "ipython>=8.37.0",
    "litellm==1.36.0",
    "mermaid-py>=0.7.1",
    "networkx>=3.4.2",
    "openai==1.76.2",
    "pytest>=8.3.5",
    "semantic-kernel>=0.4.3.dev0",
    "sympy>=1.13.3",
    "tree-sitter>=0.24.0",
]

[tool.uv]
environments = ["python_version == '3.10'"]
